# gesture-control

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup-bckp.py  setup.cfg  setup.py
.github/workflows/: build-linux.yaml  build-macos.yaml  build-test-ubuntu.yaml  build-ubuntu.yaml
gestrol/: .flake8  __init__.py  camera_interface.py  camera_stream.py  control_mode_switch.py  fps_monitor.py  frame.py  frame_pipeline.py  frame_stream.py  gesture_controller.py  video_stream.py  voting_queue.py
gestrol/camera/: __init__.py  base.py  open_cv.py  video_loader.py
gestrol/extractors/: ssd_extractor.py
gestrol/frame_pipeline/: __init__.py  frame_pipeline.py
gestrol/frame_pipeline/modifiers/: ]  __init__.py  base.py  channel.py  dimension.py  model_preproc.py  type_converters.py
gestrol/frame_stream/: __init__.py  frame_pipeline.py  frame_stream.py
gestrol/frame_stream/frame_modifiers/: __init__.py  base.py  single_channel.py
gestrol/frame_stream/modifiers/: __init__.py  base.py  preproc.py  single_channel.py
gestrol/gesture_classifier/: __init__.py  base.py  pytorch_classifier.py
gestrol/gesture_classifier/model_definitions/: __init__.py  alexnet_gc.py
gestrol/modifiers/: __init__.py  base.py  channel.py  dimension.py  filters.py  preproc.py  transforms.py  type_converters.py
gestrol/modifiers/extractors/: __init__.py  base.py  frcnn_extractor.py  frcnn_mnlrg_extractor.py  ssd_extractor.py
gestrol/training/: instructor.py  training_instructions.yaml
gestrol/utils/: logging.py
gesturemote/: __init__.py  cursor_handler.py  detector.py  draw_landmarks_code  fps_monitor.py  gesture_controller.bak  gesture_controller.py  gesture_handler.py  logger_config.py  macos_routines.py  state_controller.py  voting_queue.py
gesturemote/_cli/: __init__.py
gesturemote/camera/: __init__.py  base.py  open_cv.py  video_loader.py
gesturemote/detector/: mp_detector.py  torch_detector.py
requirements/: requirements-dev-macos.txt  requirements-dev.in  requirements-dev.txt  requirements-dev.txt.bckp  requirements-macos.txt  requirements.txt
scripts/: camera_stream.py  collect_training_clips.py  extract_senz3d.py  gesturemote_demo.py  video_stream.py  video_stream_frcnn.py  video_stream_frcnn_mnlrg.py  video_stream_ssd.py
scripts/senz3d/: extract_senz3d.py  restruct_senz3d.py
scripts/training/: train_gc.py  train_hdm_frcnn_mnlrg.py  train_hdm_ssd.py  utils.py
tests/: conftest.py  test_camera.py  test_control_mode_switch.py  test_cursor_handler.py  test_fps_monitor.py  test_frame_pipeline.py  test_frame_stream.py  test_gesture_classifier.py  test_gesture_controller.py  test_gesture_handler.py  test_mp_detector.py  test_voting_queue.py
tests/frame_stream/: test_frame_stream.py
tests/modifiers/: test_channel.py  test_dimension.py  test_filters.py  test_transforms.py  test_type_converters.py
