# Example configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude='''
(
    /(
        \.eggs
        | \.vscode
        | venv
        | \.ipynb_checkpoints
        | data
    )/
)
'''
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true

# Build system information below.
# NOTE: You don't need this in your own Black configuration.

[build-system]
requires = ["setuptools>=45.0", "setuptools_scm[toml]>=6.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "standard libraries"
import_heading_thirdparty = "external libraries"
import_heading_firstparty = "gestrol library"
dedup_headings = true
line_length = 120

[tool.pytest.ini_options]
# Option below requires `tests/optional.py`
optional-tests = [
  "no_blackd: run when `d` extra NOT installed",
  "no_jupyter: run when `jupyter` extra NOT installed",
]
markers = [
  "incompatible_with_mypyc: run when testing mypyc compiled black"
]

[tool.coverage.run]
omit = ['**/__init__.py']

[tool.mypy]
[[tool.mypy.overrides]]
module = [
  'cv2',
  'PIL',
  'PIL.*',
  'setuptools',
  'torchvision',
  'torchvision.*',
]
ignore_missing_imports = true
