[project]
name = "gesturemote"
version = "0.1.0"
authors = [
    { name="Sam Voisin" },
]
description = "gesture-based interface"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "click~=8.1",
    "numpy~=1.25",
    "opencv-python~=4.8",
    "Pillow~=9.5",
    "PyAutoGUI~=0.9",
    "torch~=2.1",
    "torchvision~=0.14",
    "mediapipe~=0.10",
]

[dependency-groups]
dev = [
    "ruff~=0.1",
    "mypy==0.910",
    "pre-commit~=3.8",
    "pytest~=7.0",
    "pytest-cov~=6.0",
    "pdbpp~=0.10",
]

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gesturemote*"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "W",  # pycodestyle warnings
  "I",  # isort
  ]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["gesturemote"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"  # Like Black, use double quotes for strings.
indent-style = "space"  # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false  # Like Black, respect magic trailing commas.
line-ending = "auto"  # Like Black, automatically detect the appropriate line ending.

[tool.pytest.ini_options]
markers = ["incompatible_with_mypyc: run when testing mypyc compiled black"]
addopts = "--cov-fail-under=80 --cov=./gesturemote --cov-report=term --cov-report=xml"

[tool.coverage.run]
omit = ['**/__init__.py']

[tool.mypy]
[[tool.mypy.overrides]]
module = ['cv2', 'PIL', 'PIL.*', 'setuptools', 'torchvision', 'torchvision.*']
ignore_missing_imports = true
