[metadata]
name = example-package-YOUR-USERNAME-HERE
version = 0.0.1
author = Sam Voisin
author_email = samvoisin@protonmail.com
description = gesture-based interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samvoisin/gesture-control
project_urls =
    Bug Tracker = https://github.com/samvoisin/gesture-control/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent

[options]
package_dir =
    = gestrol
packages = find:
python_requires = >=3.8

[options.packages.find]
where = gestrol
